responsive portfolio started

--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -1,13 +1,13 @@
 <section>
 
     <div class="portfolio-headline-container">
-        <div class="horicontal-lign w-109"></div>
+        <div class="horicontal-lign w-short"></div>
         <div class="portfolio-headline-content">
             <h2>Portfolio</h2>
             <p class="content-text aligned-center">This page is a sample of my work - please feel free to try them out.
             </p>
         </div>
-        <div class="horicontal-lign w-484"></div>
+        <div class="horicontal-lign w-long"></div>
     </div>
 
     <div class="portfolio-projects-container">
