--- a/src/app/main-content/portfolio/project/project.component.scss
+++ b/src/app/main-content/portfolio/project/project.component.scss
@@ -25,7 +25,7 @@
         flex-direction: column;
         gap: 35px;
 
-        
+
 
         .text-content-container {
             display: flex;
@@ -60,18 +60,22 @@
 
 }
 
-@media (max-width: 1280px) {
+@media (max-width: $wide-breakpoint) {
 
     .project-container {
 
-        
         .project-image {
             width: 400px;
         }
     }
+
 }
 
-@media (max-width: 1080px) {
+@media (max-width: $tablet-breakpoint) {
+
+    .project-container {
+        padding-right: calc($padding_side / 2);
+    }
 
     .project-container {
         flex-direction: column;
@@ -96,4 +100,13 @@
             }
         }
     }
+
+}
+
+@media (max-width: $mobile-breakpoint) {
+
+    .project-container {
+        padding-right: calc($padding_side / 4);
+    }
+
 }
