--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -4,13 +4,16 @@
         <div class="horicontal-lign w-short"></div>
         <div class="portfolio-headline-content">
             <h2>Portfolio</h2>
-            <p class="content-text aligned-center">This page is a sample of my work - please feel free to try them out.
+            <p class="content-text aligned-center mobile-hidden">This page is a sample of my work - please feel free to try them out.
             </p>
         </div>
         <div class="horicontal-lign w-long"></div>
     </div>
 
     <div class="portfolio-projects-container">
+
+        <p class="content-text aligned-center desktop-hidden">This page is a sample of my work - please feel free to try them out.
+        </p>
 
         <app-project *ngFor="let project of portfolio; let i = index" [projectname]="project.projectname"
             [languages]="project.languages" [description]="project.description" [linkLive]="project.linkLive"
