--- a/src/app/main-content/portfolio/project/project.component.scss
+++ b/src/app/main-content/portfolio/project/project.component.scss
@@ -3,8 +3,8 @@
 .project-container {
     display: flex;
     align-items: center;
-    gap: 35px;
-    padding-right: $padding_side;
+    justify-content: center;
+    gap: 120px;
 
     .reverse-order {
         order: 1;
@@ -24,14 +24,12 @@
         display: flex;
         flex-direction: column;
         gap: 35px;
-
-
+        max-width: 45%;
 
         .text-content-container {
             display: flex;
             flex-direction: column;
             gap: 15px;
-
 
             h3 {
                 color: $blue;
@@ -63,19 +61,24 @@
 @media (max-width: $wide-breakpoint) {
 
     .project-container {
+        gap: 75px;
 
         .project-image {
             width: 400px;
+        }
+
+        .project-content {
+            max-width: unset;
+            
+            .project-buttons {
+                gap: 35px;
+            }
         }
     }
 
 }
 
 @media (max-width: $tablet-breakpoint) {
-
-    .project-container {
-        padding-right: calc($padding_side / 2);
-    }
 
     .project-container {
         flex-direction: column;
@@ -88,6 +91,7 @@
         .project-image {
             width: 100%;
             height: 80%;
+            max-width: 600px;
         }
 
         .project-content {
@@ -98,15 +102,19 @@
                 max-width: 500px;
                 text-align: center;
             }
+
+            .project-buttons {
+                gap: 25px;
+                flex-wrap: wrap;
+                justify-content: center;
+
+                .btn {
+                    width: 100%;
+                }
+            }
         }
     }
 
 }
 
-@media (max-width: $mobile-breakpoint) {
-
-    .project-container {
-        padding-right: calc($padding_side / 4);
-    }
-
-}
+@media (max-width: $mobile-breakpoint) {}
