--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -1,19 +1,25 @@
 <section>
 
-    <div class="skills-icons-container">
-        <app-skill *ngFor="let skill of skills;" [skill]="skill"></app-skill>
-    </div>
 
     <div class="skills-headline-container">
         <div class="skills-headline-content">
             <h2>My skills</h2>
             <p class="content-text aligned-right">I have grown my frontend developments skills that have allowed me to
                 create different real projects.</p>
-            <button class="btn btn-primary">Get in touch</button>
+            <button class="btn btn-primary mobile-hidden">Get in touch</button>
         </div>
         <div class="horicontal-lign"></div>
     </div>
 
+    <div class="skills-content-container">
+        <div class="skills-icons-container">
+            <app-skill *ngFor="let skill of skills;" [skill]="skill"></app-skill>
+        </div>
+    
+        <button class="btn btn-primary desktop-hidden">Get in touch</button>
+    </div>
+    
     <img class="shadow" src="../../../assets/img/shadow3.png" alt="">
+
 
 </section>
