about me responsive

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -27,11 +27,12 @@
             </div>
         </div>
     </div>
-    <div class="about-me-image-container">
-        <img class="portrait mobile-hidden" src="../../../assets/img/portrait2.png" alt="">
-        <img class="shadow" src="../../../assets/img/shadow2.png" alt="">
-        <div class="horicontal-lign mobile-hidden"></div>
+    <div class="about-me-image-container mobile-hidden">
+        <img class="portrait" src="../../../assets/img/portrait2.png" alt="">
+        <div class="horicontal-lign"></div>
     </div>
+
+    <img class="shadow" src="../../../assets/img/shadow2.png" alt="">
 
 
 </section>
