--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -58,7 +58,9 @@
 
     </div>
 
-    <img class="shadow" src="../../../assets/img/shadow6.png" alt="">
+    <img class="shadow shadow1" src="../../../assets/img/shadow5.png" alt="">
+    <img class="shadow shadow2" src="../../../assets/img/shadow6.png" alt="">
+
     <a href="#" class="arrow-up">
         <img src="../../../assets/img/icons/arrow-up.png" alt="">
     </a>
