--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -20,8 +20,7 @@
             [linkGit]="project.linkGit" [picture]="project.picture" [index]="i">
         </app-project>
 
-        <img class="shadow shadow1" src="../../../assets/img/shadow4.png" alt="">
-        <img class="shadow shadow2" src="../../../assets/img/shadow5.png" alt="">
+        <img class="shadow" src="../../../assets/img/shadow4.png" alt="">
 
     </div>
 
