links, scrolling smooth

--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -11,7 +11,8 @@
                 <h3>Fullstack Developer</h3>
             </div>
         </div>
-        <button class="btn btn-primary">Contact me</button>
+        <!-- <button class="btn btn-primary">Contact me</button> -->
+        <a  class="btn btn-primary" href="#contact">Contact me</a>
     </div>
     <img class="bow" src="../../../assets/img/bow.png" alt="">
     <div class="social-container">
