--- a/src/app/main-content/portfolio/portfolio.component.html
+++ b/src/app/main-content/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="portfolio">
 
     <div class="portfolio-headline-container">
         <div class="horicontal-lign w-short"></div>
