--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -1,4 +1,4 @@
-<section>
+<section id="skills">
 
 
     <div class="skills-headline-container">
@@ -6,7 +6,7 @@
             <h2>My skills</h2>
             <p class="content-text aligned-right">I have grown my frontend developments skills that have allowed me to
                 create different real projects.</p>
-            <button class="btn btn-primary mobile-hidden">Get in touch</button>
+            <a class="btn btn-primary mobile-hidden" href="#contact">Get in touch</a>
         </div>
         <div class="horicontal-lign"></div>
     </div>
