--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -8,15 +8,15 @@
         </div>
         <div class="nav-container">
             <div class="nav-child mobile-hidden">
-                <a class="nav-link" href="#">About me</a>
+                <a class="nav-link" href="#aboutme">About me</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child mobile-hidden">
-                <a class="nav-link" href="#">Skills</a>
+                <a class="nav-link" href="#skills">Skills</a>
                 <div class="underline"></div>
             </div>
             <div class="nav-child mobile-hidden">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="#portfolio">Portfolio</a>
                 <div class="underline"></div>
             </div>
             <img class="desktop-hidden menu" src="../../../assets/img/icons/burgermenu.png" alt="">
