--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,13 +11,15 @@ $mobile-breakpoint: 400px;
 $tablet-breakpoint: 1000px;
 $wide-breakpoint: 1250px;
 
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
     background-color: $dark_blue;
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 
 
