--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,7 @@
 <header>
-    <img class="logo-firstname" src="../../../assets/img/firstname.png" alt="">
+    <a class="logo-link" href="/">
+        <img class="logo-firstname" src="../../../assets/img/firstname.png" alt="">
+    </a>
     <nav>
         <div class="language-container mobile-hidden">
             <a class="language-link" href="">DE</a>
