--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -1,1 +1,31 @@
-<p>impressum works!</p>
+<section>
+    <h1>Impressum</h1>
+    <div>
+        <h2>Angaben gemäß § 5 TMG</h2>
+        <p>Tobias Termer<br />
+            An der Hiltruper Baumschule 17<br />
+            48165 Münster</p>
+    </div>
+    <div>
+        <h2>Kontakt</h2>
+        <p>E-Mail: mail(at)tobias-termer.de</p>
+    </div>
+    <div>
+        <h2>Umsatzsteuer-ID</h2>
+        <p>Umsatzsteuer-Identifikationsnummer gemäß $ 27 a Umsatzsteuergesetz:<br />
+            DE363783808</p>
+    </div>
+    <div>
+        <h2>EU-Streitschlichtung</h2>
+        <p>Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: <a
+                href="https://ec.europa.eu/consumers/odr/" target="_blank" rel="noopener
+        noreferrer">https://ec.europa.eu/consumers/odr/</a>.<br /> Unsere E-Mail-Adresse finden Sie oben im
+            Impressum.</p>
+    </div>
+    <div>
+        <h2>Verbraucherstreitbeilegung / Universalschlichtungsstelle</h2>
+        <p>Wir sind nicht bereit oder verpflichtet, an Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle
+            teilzunehmen.</p>
+    </div>
+    <p>Quelle: <a href="https://www.e-recht24.de">eRecht24</a></p>
+</section>
