side menu implemented

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 $dark_blue: #141D2F;
 $blue: #4B47FF;
 $light_blue: #00BEE8;
+$dark_grey: #414856;
 
 $padding_side: 100px;
 $padding_side_double: 200px;
