--- a/src/app/impressum/impressum.component.scss
+++ b/src/app/impressum/impressum.component.scss
@@ -12,8 +12,7 @@ section{
     h1,h2,p {
         color:white;
         white-space: unset;
-        margin-block-start: 0;
-        margin-block-end: 0;        
+       
     }
 
     h1{
@@ -22,6 +21,11 @@ section{
 
     h2{
         font-size: 24px;
+    }
+
+    p {
+        margin-block-start: 0;
+        margin-block-end: 0; 
     }
 
     a {
