--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -1,18 +1,19 @@
 <section>
     <div>
-        <img class="shadow" src="../../../assets/img/shadow1.png" alt="">
-        <img class="portrait" src="../../../assets/img/portrait1.png" alt="">
+        <img class="shadow" src="../../../assets/img/shadow1.png">
+        <img class="portrait" src="../../../assets/img/portrait1.png" data-aos="fade-right" data-aos-duration="1000">
     </div>
     <div class="text-container">
         <div class="headline">
-            <span>I am</span>
-            <div class="main-headline">
+            <span data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600">I am</span>
+            <div class="main-headline" data-aos="fade-left" data-aos-duration="1000">
                 <h1>Tobias Termer</h1>
                 <h3>Fullstack Developer</h3>
             </div>
         </div>
-        <!-- <button class="btn btn-primary">Contact me</button> -->
-        <a  class="btn btn-primary" href="#contact">Contact me</a>
+        <div class="btn-container" data-aos="fade-down-left" data-aos-duration="1000">
+            <a  class="btn btn-primary" href="#contact">Contact me</a>
+        </div>
     </div>
     <img class="bow" src="../../../assets/img/bow.png" alt="">
     <div class="social-container">
