--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,13 +14,13 @@ $wide-breakpoint: 1250px;
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden !important;
 }
 
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
     background-color: $dark_blue;
-    overflow-x: hidden;
 }
 
 
@@ -88,7 +88,8 @@ h3 {
     font-size: 32px;
 }
 
-h2, h3 {
+h2,
+h3 {
     font-weight: bold;
     margin-block-start: 0;
     margin-block-end: 0;
@@ -165,8 +166,6 @@ h2, h3 {
     border: 0;
     background-color: $blue;
 }
-
-
 
 @media (min-width: $tablet-breakpoint) {
     .desktop-hidden {
