--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,6 +1,6 @@
 <section id="aboutme">
 
-    <div class="about-me-content-container">
+    <div class="about-me-content-container" data-aos="fade-right" data-aos-duration="1000">
         <h2>About me</h2>
         <div class="about-me-content">
             <div class="content-child">
@@ -27,7 +27,8 @@
             </div>
         </div>
     </div>
-    <div class="about-me-image-container mobile-hidden">
+
+    <div class="about-me-image-container mobile-hidden" data-aos="fade-left" data-aos-duration="1000">
         <img class="portrait" src="../../../assets/img/portrait2.png" alt="">
         <div class="horicontal-lign"></div>
     </div>
