--- a/src/app/main-content/landing/landing.component.scss
+++ b/src/app/main-content/landing/landing.component.scss
@@ -4,13 +4,13 @@ section {
     display: flex;
     justify-content: space-between;
     padding: 0 $padding_side 0 $padding_side;
-    height: calc(100vh - 126px);
+    height: calc(100vh - 200px);
     overflow: hidden;
 }
 
 .shadow {
     height: 600px;
-    bottom: 200px;
+    bottom: 185px;
     left: 0;
     position: absolute;
     z-index: -1;
@@ -19,7 +19,7 @@ section {
 .portrait {
     height: calc(100vh - 200px);
     position: absolute;
-    top: 75px;
+    top: 105px;
     z-index: -1;
 }
 
@@ -35,6 +35,13 @@ section {
 }
 
 .text-container {
+    overflow-x: hidden;
+    position: absolute;
+    top: 100px;
+    bottom: 100px;
+    margin: auto;
+    right: $padding_side;
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -190,7 +197,7 @@ section {
     section {
         padding-left: calc($padding_side / 2);
         padding-right: calc($padding_side / 2);
-        height: calc(100vh - 117px);
+        height: calc(100vh - 191px);
     }
 
     .shadow {
@@ -204,7 +211,7 @@ section {
     }
 
     .portrait {
-        height: calc(100vh - 370px);
+        height: calc(100vh - 380px);
         object-fit: cover;
         object-position: top center;
         right: 0;
@@ -224,10 +231,10 @@ section {
 
 
     .text-container {
-        position: absolute;
         bottom: 125px;
         left: 0;
         right: 0;
+        top: unset;
 
         .headline {
 
@@ -264,7 +271,7 @@ section {
     section {
         padding-left: calc($padding_side / 4);
         padding-right: calc($padding_side / 4);
-        height: calc(100vh - 110px);
+        height: calc(100vh - 184px);
     }
 
     .bow {
@@ -273,7 +280,6 @@ section {
     }
 
     .text-container {
-        position: absolute;
         bottom: 125px;
 
         .headline {
