--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -1,7 +1,7 @@
 <section id="skills">
 
 
-    <div class="skills-headline-container">
+    <div class="skills-headline-container" data-aos="fade-left" data-aos-duration="1000">
         <div class="skills-headline-content">
             <h2>My skills</h2>
             <p class="content-text aligned-right">I have grown my frontend developments skills that have allowed me to
@@ -11,12 +11,12 @@
         <div class="horicontal-lign"></div>
     </div>
 
-    <div class="skills-content-container">
+    <div class="skills-content-container" data-aos="fade-right" data-aos-duration="1000">
         <div class="skills-icons-container">
             <app-skill *ngFor="let skill of skills;" [skill]="skill"></app-skill>
         </div>
     
-        <button class="btn btn-primary desktop-hidden">Get in touch</button>
+        <a href="#contact" class="btn btn-primary desktop-hidden">Get in touch</a>
     </div>
     
     <img class="shadow" src="../../../assets/img/shadow3.png" alt="">
