--- a/src/app/shared/header-mobile/header-mobile.component.scss
+++ b/src/app/shared/header-mobile/header-mobile.component.scss
@@ -6,6 +6,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    overflow: hidden;
 
     .header-icon {
         position: absolute;
@@ -123,7 +124,16 @@ header {
 .strong-hidden {
     opacity: 0;
     left: 100vw !important;
-    display: none;
+    display: none !important;
+}
+
+.d-none {
+    display: none !important;
+}
+
+.d-flex {
+    display: flex;
+    left: 100vw !important;
 }
 
 @media (max-width: $tablet-breakpoint) {
@@ -139,6 +149,7 @@ header {
             padding-left: calc($padding_side / 2);
             padding-right: calc($padding_side / 2);
             width: calc(100% - $padding_side);
+            top: 117.34px;
         }
     }
 
@@ -157,6 +168,7 @@ header {
             padding-left: calc($padding_side / 4);
             padding-right: calc($padding_side / 4);
             width: calc(100% - $padding_side / 2);
+            top: 110.11px;
         }
     }
 
