--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -6,12 +6,14 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    overflow: hidden;
+    z-index: 30;
 
     .logo-link {
         display: flex;
         align-items: flex-end;
     }
-    
+
     nav {
         display: flex;
         gap: 29px;
