--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -4,9 +4,9 @@
     </a>
     <nav>
         <div class="language-container mobile-hidden">
-            <a class="language-link" href="">DE</a>
+            <a (click)="switchLanguage('de');" class="language-link">DE</a>
             <div class="vertical-lign"></div>
-            <a class="language-link" href="">EN</a>
+            <a (click)="switchLanguage('en');" class="language-link">EN</a>
         </div>
         <div class="nav-container">
             <div class="nav-child mobile-hidden">
