--- a/src/app/main-content/landing/landing.component.html
+++ b/src/app/main-content/landing/landing.component.html
@@ -8,11 +8,11 @@
             <span data-aos="fade-down" data-aos-duration="1000" data-aos-delay="600">I am</span>
             <div class="main-headline" data-aos="fade-left" data-aos-duration="1000">
                 <h1>Tobias Termer</h1>
-                <h3>Fullstack Developer</h3>
+                <h3 translate>Fullstack Developer</h3>
             </div>
         </div>
         <div class="btn-container" data-aos="fade-down-left" data-aos-duration="1000">
-            <a  class="btn btn-primary" href="#contact">Contact me</a>
+            <a  class="btn btn-primary" href="#contact" translate>Contact me</a>
         </div>
     </div>
     <img class="bow" src="../../../assets/img/bow.png" alt="">
